update header, login, logout for customer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,173 +1,17 @@
-
-*{
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+html {
+  position: relative;
+  min-height: 100%;
 }
 
-.wrapper{
-    padding: 1%;
-    width: 98%;
-    margin: 0 auto;
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 100px;
 }
 
-.text-center{
-    text-align: center;
-}
-
-.clearfix{
-    clear: both;
-}
-
-.tbl-full{
-    width: 100%;
-}
-
-.tbl-30{
-    width: 30%;
-}
-
-table tr th{
-    border-bottom: 1px solid black;
-    padding: 5px;
-    text-align: left;
-}
-
-table tr td{
-    padding: 5px;
-}
-
-.btn-primary{
-    background-color: #1e90ff;
-    padding: 1%;
-    color: black;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.btn-primary:hover{
-    background-color: #3742fa;
-}
-
-.btn-secondary{
-    background-color: #7bed9f;
-    padding: 1%;
-    color: black;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.btn-secondary:hover{
-    background-color: #2ed573;
-}
-
-.btn-danger{
-    background-color: #ff6b81;
-    padding: 1%;
-    color: black;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.btn-danger:hover{
-    background-color: #ff4757;
-}
-
-
-.success{
-    color: #2ed573;
-}
-
-.error{
-    color: #ff4757;
-}
-
-
-.a-fourth{
-    float: left;
-    width: 20%;
-    margin: 1%;
-}
-.two-fourths{
-    float: left;
-    width: 40%;
-    margin: 1%;
-}
-.three-fourths{
-    float: left;
-    width: 70%;
-    margin: 1%;
-}
-
-
-
-
-
-/* CSS for Meunu */
-.menu{
-    background-color: #bebebe;
-}
-.menu ul{
-    list-style-type: none;
-}
-
-.menu ul li{
-    display: inline;
-    padding: 1%;
-}
-
-.menu ul li a{
-    text-decoration: none;
-    font-weight: bold;
-    color: black;
-}
-
-.menu ul li a:hover{
-    color: #64272c;
-}
-
-
-/* CSS for main-content */
-.main-content{
-    background-color: #f1f2f6;
-    padding: 3% 0;
-}
-
-.col-4{
-    width: 20%;
-    background-color: white;
-    margin: 1%;
-    padidng: 2%;
-    float: left;
-}
-
-/* CSS for Footer */
-.footer{
-    background-color: #bebebe;
-    color: black;
-}
-
-
-/* CSS for Login */
-.login{
-    border: 1px solid grey;
-    width: 20%;
-    margin: 10% auto;
-    padding: 2%;
-} 
-
-
-/* CSS for manage book */
-
-.book-tbl tr {
-    height: 150px;
-}
-
-.book-info p {
-    margin-top: 20px;
-}
-
-.book-info h2 {
-    color: red;
-    margin-top: 50px;
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 100px;
 }
