--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,3 @@
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 100px;
-}
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 100px;
+ul li a:link{
+  text-decoration: none !important;
 }
